# siterecon-crewai-agent

./: .gitignore  README.md  pyproject.toml  siterecon-user-personas.md  validation.md
src/siterecon_crewai_agent/: crew.py  main.py
src/siterecon_crewai_agent/config/: agents.yaml  tasks.yaml
