[project]
name = "siterecon_crewai_agent"
version = "0.1.0"
description = "siterecon-crewai-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
siterecon_crewai_agent = "siterecon_crewai_agent.main:run"
run_crew = "siterecon_crewai_agent.main:run"
train = "siterecon_crewai_agent.main:train"
replay = "siterecon_crewai_agent.main:replay"
test = "siterecon_crewai_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
